[gd_scene load_steps=6 format=3 uid="uid://c72633rkn032q"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_3wqfo"]
[ext_resource type="Script" path="res://scripts/destination.gd" id="3_pq0sj"]

[sub_resource type="Animation" id="Animation_mqd7i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DestinationList:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_yw4ou"]
resource_name = "TypewriterEffect"
length = 1.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gjytf"]
_data = {
"RESET": SubResource("Animation_mqd7i"),
"TypewriterEffect": SubResource("Animation_yw4ou")
}

[node name="Node" type="Node"]
script = ExtResource("1_3wqfo")

[node name="TextScreen" type="Sprite2D" parent="."]

[node name="Label" type="Label" parent="TextScreen"]
offset_right = 744.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 32
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Timer" type="Timer" parent="TextScreen"]
wait_time = 2.25
one_shot = true
autostart = true

[node name="DestinationList" type="Label" parent="TextScreen" node_paths=PackedStringArray("actionlist")]
visible = false
offset_left = 1.0
offset_top = 1.0
offset_right = 745.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 24
text = "Meet %s and %s. Two guys in the prime of their youth. They want to 
see the world! :>

%s - %d money; %d sleep; %d motivation
%s - %d money; %d sleep; %d motivation
Total Gas: %d

There are 3 stops that we need to hit before we get to Newtopia:
	- Shull Gas Station: needs %d gallons of gas
	- Rusty's Burgers and Fries: needs %d gallons of gas
	- The Desert Hills Inn: needs %d gallons of gas
	- Newtopia: %d gallons of gas

What should each character do?
	%s %c
	%s %c
"
script = ExtResource("3_pq0sj")
actionlist = NodePath("../ActionList")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextScreen"]
libraries = {
"": SubResource("AnimationLibrary_gjytf")
}

[node name="ActionList" type="ItemList" parent="TextScreen"]
visible = false
offset_left = 6.0
offset_top = 601.0
offset_right = 228.0
offset_bottom = 641.0
item_count = 3
max_columns = 3
item_0/text = "Drive      "
item_1/text = "Sleep     "
item_2/text = "Explore"

[node name="TimeLeftLabel" type="Label" parent="TextScreen"]
offset_left = 1037.0
offset_top = 543.0
offset_right = 1125.0
offset_bottom = 588.0
theme_override_font_sizes/font_size = 50

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(767, 429)
zoom = Vector2(0.75, 0.75)

[connection signal="timeout" from="TextScreen/Timer" to="." method="_on_timer_timeout"]
[connection signal="transition" from="TextScreen/DestinationList" to="." method="_on_destination_list_transition"]
[connection signal="visibility_changed" from="TextScreen/DestinationList" to="TextScreen/DestinationList" method="_on_visibility_changed"]
[connection signal="item_activated" from="TextScreen/ActionList" to="TextScreen/DestinationList" method="_on_item_list_2_item_activated"]
